@@ -174,6 +174,7 @@ Lead Slurm developers are:
 <li>Denis Nadeau</li>
 <li>Jon Nelson (Dyn)</li>
 <li>Mark Nelson (IBM)</li>
+<li>Ole H. Nielsen (Technical University of Denmark)</li>
 <li>Jim Nordby (Cray)</li>
 <li>Michal Novotny (Masaryk University, Czech Republic)</li>
 <br>
