@@ -1,6 +1,6 @@
 [Unit]
 Description=Slurm DBD accounting daemon
-After=network.target
+After=network.target munge.service
 ConditionPathExists=@sysconfdir@/slurmdbd.conf
 
 [Service]
