@@ -20,6 +20,8 @@ documents those changes that are of interest to users and administrators.
  -- Correct invokation of man2html, which previously could cause FreeBSD builds
     to hang.
  -- MYSQL - Unconditionally remove 'ignore' clause from 'alter ignore'.
+ -- Modify service files to not start Slurm daemons until after Munge has been
+    started.
 
 * Changes in Slurm 17.02.0pre2
 ==============================
